src/test/ui/issues/issue-12028.stderr
error[E0284]: type annotations required: cannot resolve `<_ as StreamHasher>::S == <H as StreamHasher>::S`
  --> $DIR/issue-12028.rs:39:14
   |
LL |         self.input_stream(&mut stream); //~ ERROR type annotations required
   |              ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
